--- a/iOS/AttendanceApp/AttendanceApp/Base.lproj/Main.storyboard
+++ b/iOS/AttendanceApp/AttendanceApp/Base.lproj/Main.storyboard
@@ -52,7 +52,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="View Accounts"/>
                                 <connections>
-                                    <segue destination="v8h-UJ-FR4" kind="presentation" id="7GQ-wI-nm6"/>
+                                    <segue destination="rgo-LT-KJU" kind="presentation" identifier="accountsSegue" id="H8k-tO-ZoC"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hix-lP-Rvv">
@@ -63,6 +63,12 @@
                                     <segue destination="w3f-l3-6Ub" kind="presentation" id="cjx-UU-WyQ"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LKO-xn-QYe">
+                                <rect key="frame" x="16" y="170" width="343" height="39"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -70,12 +76,14 @@
                             <constraint firstItem="LX4-Fs-4Ab" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FqK-1J-s0D"/>
                             <constraint firstItem="r9r-s8-wgZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="L6K-Sw-O31"/>
                             <constraint firstItem="bpZ-X5-3fs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="P3g-sm-aa4"/>
+                            <constraint firstItem="LKO-xn-QYe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="fNc-dQ-XHa"/>
                             <constraint firstItem="Pbi-x2-C1B" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gtk-Hd-lHm"/>
                             <constraint firstItem="1VA-CL-1vM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="haV-KC-PEw"/>
                             <constraint firstItem="LX4-Fs-4Ab" firstAttribute="top" secondItem="Pbi-x2-C1B" secondAttribute="bottom" constant="20" id="kzC-oI-Bc2"/>
                             <constraint firstItem="r9r-s8-wgZ" firstAttribute="top" secondItem="bpZ-X5-3fs" secondAttribute="bottom" constant="20" id="orQ-fA-Gbu"/>
                             <constraint firstItem="Pbi-x2-C1B" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="tZQ-Xo-C87"/>
                             <constraint firstItem="bpZ-X5-3fs" firstAttribute="top" secondItem="LX4-Fs-4Ab" secondAttribute="bottom" constant="20" id="u9e-KY-kS2"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LKO-xn-QYe" secondAttribute="trailing" constant="16" id="ws5-qx-EuA"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -83,12 +91,13 @@
                         <outlet property="descriptionLabel" destination="Pbi-x2-C1B" id="JUh-ER-ubr"/>
                         <outlet property="majorValueLabel" destination="bpZ-X5-3fs" id="QmK-GY-al7"/>
                         <outlet property="minorValueLabel" destination="r9r-s8-wgZ" id="NdP-Ni-M4C"/>
+                        <outlet property="nameLabel" destination="LKO-xn-QYe" id="zxr-FI-6hx"/>
                         <outlet property="uuidLabel" destination="LX4-Fs-4Ab" id="dFn-kY-ZgU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-143" y="206"/>
+            <point key="canvasLocation" x="-143.19999999999999" y="205.54722638680661"/>
         </scene>
         <!--Profile View Controller-->
         <scene sceneID="hW8-Lh-S18">
@@ -245,6 +254,19 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="m7c-pc-Jwu">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Title" id="hny-SJ-Pvv">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="inw-1M-3Cg">
+                                            <connections>
+                                                <action selector="cancelButton:" destination="rgo-LT-KJU" id="6oH-A9-tJN"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="1Jm-e5-3of"/>
@@ -262,25 +284,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hht-VK-MNN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1616.8" y="609.44527736131943"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="MBi-Yb-IB6">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="v8h-UJ-FR4" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Iyh-sR-Gxb">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="rgo-LT-KJU" kind="relationship" relationship="rootViewController" id="JyY-cA-OIe"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bzd-3w-uu6" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="904" y="609.89505247376314"/>
+            <point key="canvasLocation" x="918" y="579"/>
         </scene>
     </scenes>
 </document>
